DuPont DevSB/src/objects/Outbound_Notification__c.object
<CustomObject>
    <description>Interacts with Middle Ware Input Handler</description>
    <fields>
        <fullName>Integration_Status__c</fullName>
        <label>Integration Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Initial</fullName>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated.  Its is case insensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Message_Type__c</fullName>
        <label>Message Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Internal Order</fullName>
                </value>
                <value>
                    <fullName>ICDR PO</fullName>
                </value>
                <value>
                    <fullName>Time Sheet Entry</fullName>
                </value>
                <value>
                    <fullName>Expense</fullName>
                </value>
                <value>
                    <fullName>Billing - Sales Order</fullName>
                </value>
                <value>
                    <fullName>ICDRPO Closures</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Object_ID__c</fullName>
        <label>Object ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Received_DateTime__c</fullName>
        <label>Received DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Record_ID_List__c</fullName>
        <label>Record ID List</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sent_DateTime__c</fullName>
        <label>Sent DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Insert</fullName>
                    <default>true</default>
                    <label>Insert</label>
                </value>
                <value>
                    <fullName>Update</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Outbound Notification</label>
    <nameField>
        <displayFormat>ON-{00000000}</displayFormat>
        <label>ON Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Outbound Notifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>